# monnidb

./: .clang-format  .gitignore  CMakeLists.txt  README.md  database.cpp  main.cpp
.github/workflows/: codeql.yml
include/: database.h  queryengine.h  table.h
src/: main.cpp  queryengine.cpp  table.cpp
tests/: queryengine_test.cpp
